// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberCelebrate renders correctly 1`] = `
<Fragment>
  <_default
    screenName={
      Array [
        "person",
        "celebrate",
      ]
    }
  />
  <Connect(CelebrateFeed)
    isMember={true}
    itemNamePressable={false}
    items={
      Array [
        Object {
          "data": Array [
            Object {
              "adjective_attribute_value": 4,
              "celebrateable_type": "interaction",
              "changed_attribute_value": "2018-06-11 00:00:00 UTC",
              "id": "10",
              "subject_person": Object {
                "id": "1",
              },
            },
          ],
          "date": "2018-06-11 00:00:00 UTC",
          "id": 0,
        },
      ]
    }
    loadMoreItemsCallback={[Function]}
    organization={
      Object {
        "celebrateItems": Array [
          Object {
            "adjective_attribute_value": 4,
            "celebrateable_type": "interaction",
            "changed_attribute_value": "2018-06-11 00:00:00 UTC",
            "id": "10",
            "subject_person": Object {
              "id": "1",
            },
          },
        ],
        "celebratePagination": Object {
          "hasNextPage": true,
          "page": 0,
        },
        "id": "456",
      }
    }
    refreshCallback={[Function]}
  />
</Fragment>
`;

exports[`MemberCelebrate renders empty feed correctly 1`] = `
<Fragment>
  <_default
    screenName={
      Array [
        "person",
        "celebrate",
      ]
    }
  />
  <Connect(CelebrateFeed)
    isMember={true}
    itemNamePressable={false}
    items={Array []}
    loadMoreItemsCallback={[Function]}
    organization={
      Object {
        "celebrateItems": Array [],
        "celebratePagination": Object {
          "hasNextPage": true,
          "page": 0,
        },
        "id": "123",
      }
    }
    refreshCallback={[Function]}
  />
</Fragment>
`;
